#804 WIP Added a stop session button along with a new modal that pops up to ask you to rate the route.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,7 +19,7 @@
 @import "~leaflet-contextmenu/dist/leaflet.contextmenu.css";
 @import "~leaflet-gesture-handling/dist/leaflet-gesture-handling.css";
 // Bar rating
-@import "~jquery-bar-rating/dist/themes/bars-1to10.css";
+//@import "~jquery-bar-rating/dist/themes/fontawesome-stars.css";
 // Owl Carousel
 @import "~owl.carousel/dist/assets/owl.carousel.min.css";
 // Intro.js
