--- a/resources/assets/sass/theme/darkly/darkly.scss
+++ b/resources/assets/sass/theme/darkly/darkly.scss
@@ -21,4 +21,12 @@
   .table-striped tbody tr:nth-of-type(odd) {
     background-color: var(--theme-darker);
   }
+
+  /** Size of the stars in the "conclude live session" modal dialog */
+  .br-theme-fontawesome-stars .br-widget {
+    height: 42px;
+  }
+  .br-theme-fontawesome-stars .br-widget a {
+    font-size: 2.37em;
+  }
 }
