--- a/resources/assets/sass/theme/lux/lux.scss
+++ b/resources/assets/sass/theme/lux/lux.scss
@@ -80,4 +80,12 @@
       background-color: #F7F7F7 !important;
     }
   }
+
+  /** Size of the stars in the "conclude live session" modal dialog */
+  .br-theme-fontawesome-stars .br-widget {
+    height: 42px;
+  }
+  .br-theme-fontawesome-stars .br-widget a {
+    font-size: 2.48em;
+  }
 }
