#782 You can now report routes from any overview pages so you don't have to open the route to do so.

--- a/resources/assets/sass/theme/darkly/darkly.scss
+++ b/resources/assets/sass/theme/darkly/darkly.scss
@@ -21,4 +21,10 @@
   .table-striped tbody tr:nth-of-type(odd) {
     background-color: var(--theme-darker);
   }
+
+  .card_dungeonroute.dungeon_image {
+    .menu_actions_btn {
+      font-size: 0.9rem;
+    }
+  }
 }
