--- a/resources/assets/sass/theme/lux/lux.scss
+++ b/resources/assets/sass/theme/lux/lux.scss
@@ -79,5 +79,9 @@
     .bg-card-footer {
       background-color: #F7F7F7 !important;
     }
+
+    .menu_actions_btn {
+      font-size: 0.9rem;
+    }
   }
 }
