#817 Affixes for which a subcreation tier list is shown are now highlighted with a border.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -197,6 +197,11 @@
     left: 0;
 }
 
+.affix_group_row.current {
+    border: red 2px solid;
+    border-radius: 3px;
+}
+
 .routes_table .owl-carousel {
     width: 192px;
     height: 128px;
