#826 Converted echo following/unfollowing snackbars to generic snackbars which can be used for all kinds of things.

--- a/resources/assets/js/handlebars/map_controls_route_echo_refollow_user_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_echo_refollow_user_template.handlebars
@@ -1,4 +1,4 @@
-<div class="row no-gutters mb-4 p-2 bg-secondary" style="border-radius: 2px;">
+<div class="row no-gutters">
     <div class="col">
         {{ echo_following_user_stopped_label }} {{ name }}
     </div>
