--- a/resources/assets/js/handlebars/map_enemy_visual_enemy_forces_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_enemy_forces_template.handlebars
@@ -1,5 +1,5 @@
 <div id="map_enemy_visual_{{id}}_enemy_forces"
-     class="align-middle text-center"
-     style="display: flex; width: 100%; height: 100%; font: 12px 'Helvetica Neue', Arial, Helvetica, sans-serif; font-size: {{width}}px;">
+     class="align-middle text-center enemy_icon_npc_enemy_forces_inner"
+     style="font-size: {{width}}px;">
     <div class="my-auto w-100">{{displayText}}</div>
 </div>
