#826 Updated visuals for overpulled enemies - not 100% happy yet but getting there.
Skippable enemies are now shown when mouse overing them + info tooltip to indicate what it means (it's no longer part of the 'you must kill these enemies to publish' feature)

--- a/resources/assets/js/handlebars/map_enemy_visual_enemy_portrait_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_enemy_portrait_template.handlebars
@@ -2,8 +2,14 @@
      class="enemy_icon_npc_enemy_portrait_inner"
      style="background-image: url('/images/enemyportraits/{{npcId}}.png');">
     {{#if obsolete}}
-        <span class="obsolete text-danger" style="font-size: {{width}}px; background-color: black; border-radius: 100px">
+        <span class="obsolete text-danger"
+              style="font-size: {{width}}px; background-color: black; border-radius: 100px">
             <i class="fa fa-times-circle"></i>
+        </span>
+    {{else if overpulled}}
+        <span class="overpulled text-success"
+              style="font-size: {{width}}px; background-color: black; border-radius: 100px">
+            <i class="fa fa-check-circle"></i>
         </span>
     {{else}}
         &nbsp;
