#826 Map visuals should be complete now.
Only just need to make some corrections in the selection algorithm for skippable enemies.

--- a/resources/assets/js/handlebars/map_enemy_visual_enemy_portrait_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_enemy_portrait_template.handlebars
@@ -9,7 +9,7 @@
     {{else if overpulled}}
         <span class="overpulled text-success"
               style="font-size: {{width}}px; background-color: black; border-radius: 100px">
-            <i class="fa fa-check-circle"></i>
+            <i class="fa fa-plus-circle"></i>
         </span>
     {{else}}
         &nbsp;
