--- a/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
@@ -1,8 +1,10 @@
-<div id="map_enemy_forces" class="font-weight-bold text-center" data-toggle="tooltip">
-    <span id="map_enemy_forces_numbers" class="sidebar-background">
+<div id="map_enemy_forces" class="font-weight-bold text-center">
+    <span id="map_enemy_forces_numbers" class="sidebar-background" data-toggle="tooltip">
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
-        <span id="map_enemy_forces_count">0</span>/<span id="map_enemy_forces_count_total">{{enemy_forces_total}}</span> (<span
-            id="map_enemy_forces_percent">0</span>%)
+        <span id="map_enemy_forces_count">0</span>/<span id="map_enemy_forces_count_total">{{enemy_forces_total}}</span>
+        (<span id="map_enemy_forces_percent">0</span>%)
     </span>
+    <i id="map_enemy_forces_override_warning" class="fas fa-exclamation-triangle text-warning" style="display: none;"
+        data-toggle="tooltip" title="{{enemy_forces_overridden_label}}"></i>
 </div>
