--- a/resources/assets/css/affixes.css
+++ b/resources/assets/css/affixes.css
@@ -11,29 +11,30 @@
 .affix_icon_fortified, .affix_icon_grievous, .affix_icon_infested, .affix_icon_inspiring, .affix_icon_necrotic,
 .affix_icon_prideful, .affix_icon_quaking, .affix_icon_raging, .affix_icon_reaping, .affix_icon_relentless,
 .affix_icon_sanguine, .affix_icon_skittish, .affix_icon_spiteful, .affix_icon_storming, .affix_icon_teeming,
-.affix_icon_tormented, .affix_icon_tyrannical, .affix_icon_volcanic
+.affix_icon_tormented, .affix_icon_tyrannical, .affix_icon_unknown, .affix_icon_volcanic
 { max-width: 100% !important; background-size: 100% !important; background-image: url('/images/affixes/affixes.png'); }
 
 .affix_icon_awakened { background-position: 0 0; }
-.affix_icon_beguiling { background-position: 0 4.545454%; }
-.affix_icon_bolstering { background-position: 0 9.090909%; }
-.affix_icon_bursting { background-position: 0 13.636363%; }
-.affix_icon_explosive { background-position: 0 18.181818%; }
-.affix_icon_fortified { background-position: 0 22.727272%; }
-.affix_icon_grievous { background-position: 0 27.272727%; }
-.affix_icon_infested { background-position: 0 31.818181%; }
-.affix_icon_inspiring { background-position: 0 36.363636%; }
-.affix_icon_necrotic { background-position: 0 40.909090%; }
-.affix_icon_prideful { background-position: 0 45.454545%; }
-.affix_icon_quaking { background-position: 0 50%; }
-.affix_icon_raging { background-position: 0 54.545454%; }
-.affix_icon_reaping { background-position: 0 59.090909%; }
-.affix_icon_relentless { background-position: 0 63.636363%; }
-.affix_icon_sanguine { background-position: 0 68.181818%; }
-.affix_icon_skittish { background-position: 0 72.727272%; }
-.affix_icon_spiteful { background-position: 0 77.272727%; }
-.affix_icon_storming { background-position: 0 81.818181%; }
-.affix_icon_teeming { background-position: 0 86.363636%; }
-.affix_icon_tormented { background-position: 0 90.909090%; }
-.affix_icon_tyrannical { background-position: 0 95.454545%; }
+.affix_icon_beguiling { background-position: 0 4.3478%; }
+.affix_icon_bolstering { background-position: 0 8.695652%; }
+.affix_icon_bursting { background-position: 0 13.043478%; }
+.affix_icon_explosive { background-position: 0 17.391304%; }
+.affix_icon_fortified { background-position: 0 21.73913%; }
+.affix_icon_grievous { background-position: 0 26.086956%; }
+.affix_icon_infested { background-position: 0 30.434782%; }
+.affix_icon_inspiring { background-position: 0 34.782608%; }
+.affix_icon_necrotic { background-position: 0 39.130434%; }
+.affix_icon_prideful { background-position: 0 43.47826%; }
+.affix_icon_quaking { background-position: 0 47.826086%; }
+.affix_icon_raging { background-position: 0 52.173912%; }
+.affix_icon_reaping { background-position: 0 56.521738%; }
+.affix_icon_relentless { background-position: 0 60.869564%; }
+.affix_icon_sanguine { background-position: 0 65.21739%; }
+.affix_icon_skittish { background-position: 0 69.565216%; }
+.affix_icon_spiteful { background-position: 0 73.913042%; }
+.affix_icon_storming { background-position: 0 78.260868%; }
+.affix_icon_teeming { background-position: 0 82.608694%; }
+.affix_icon_tormented { background-position: 0 86.95652%; }
+.affix_icon_tyrannical { background-position: 0 91.304346%; }
+.affix_icon_unknown { background-position: 0 95.652172%; }
 .affix_icon_volcanic { background-position: 0 100%; }
