#867 Following a user will now always update you to the most recently known position, and not the position before that.

--- a/resources/assets/js/handlebars/map_user_mouse_position_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_user_mouse_position_visual_template.handlebars
@@ -1,4 +1,4 @@
-<div class="inner echo_user_{{user_id}} text-center" style="width: {{width}}px; height: {{height}}px;">
+<div class="inner echo_user_{{public_key}} text-center" style="width: {{width}}px; height: {{height}}px;">
     {{#ifCond avatar_url '==' null}}
         <div class="w-100 h-100" style="font-size: {{textWidth}}px; padding: 2px;">
             {{initials}}
