--- a/resources/assets/js/handlebars/map_map_icon_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_map_icon_visual_template.handlebars
@@ -1,3 +1,3 @@
-<div class="map_icon {{key}} {{selectedclass}}" style="width: {{width}}px; height: {{height}}px;">
-    <img src="/images/mapicon/{{key}}.png" style="width: {{width}}px; height: {{height}}px;"/>
+<div class="map_icon {{key}} {{selectedclass}}" style="width: {{outer_width}}px; height: {{outer_height}}px;">
+    <img src="/images/mapicon/{{key}}.png" style="width: {{inner_width}}px; height: {{inner_height}}px;"/>
 </div>
