#892 You can now once again set a default color for your free-drawn lines or paths from the settings. Clear the value to be assigned random colors instead. <@134118092082118657>

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -1095,3 +1095,8 @@ html, body, #map, #app, .wrapper {
         color: inherit;
     }
 }
+
+/* Make the selection fill the width of the parent */
+.default_color_selection .pickr .pcr-button {
+    width: 100%;
+}
