#888 I can now couple any MDT enemy to any Keystone.guru enemy for MDT import/export purposes.
This was sometimes an issue when MDT has mapping errors and the npc_ids don't match.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -712,6 +712,10 @@ html, body, #map, #app, .wrapper {
     background-color: green;
 }
 
+.enemy_icon.mdt.coupled.different_npc {
+    background-color: orange;
+}
+
 /*
  * Enemy types
  */
