--- a/resources/assets/js/handlebars/map_enemy_visual_enemy_mdt_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_enemy_mdt_template.handlebars
@@ -1,3 +1,3 @@
-<div style="font-size: {{width}}px; line-height: {{width}}px;">
+<div class="mdt_inner" style="font-size: {{width}}px; line-height: {{width}}px;">
     {{text}}
 </div>
