--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -216,21 +216,31 @@ html, body, #map, #app, .wrapper {
 #pulls_sidebar .bg-header {
     padding-right: 0 !important;
     user-select: none;
+
+    -webkit-transition: right 0.2s;
+    -o-transition: right 0.2s;
+    transition: right 0.2s;
 }
 
 #pulls_sidebar.active {
     right: 0;
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1024px) {
+    #pulls_sidebar,
+    #pulls_sidebar .bg-header {
+        width: 300px;
+    }
+
+    #pulls_sidebar:not(.active) {
+        right: -300px;
+    }
+}
+
+@media (min-width: 1024px) {
     #pulls_sidebar,
     #pulls_sidebar .bg-header {
         width: 350px;
-        padding-right: 0 !important;
-
-        -webkit-transition: right 0.2s;
-        -o-transition: right 0.2s;
-        transition: right 0.2s;
     }
 
     #pulls_sidebar:not(.active) {
@@ -242,7 +252,6 @@ html, body, #map, #app, .wrapper {
     #pulls_sidebar,
     #pulls_sidebar .bg-header {
         width: 400px;
-        padding-right: 0 !important;
     }
 
     #pulls_sidebar:not(.active) {
@@ -254,7 +263,6 @@ html, body, #map, #app, .wrapper {
     #pulls_sidebar,
     #pulls_sidebar .bg-header {
         width: 450px;
-        padding-right: 0 !important;
     }
 
     #pulls_sidebar:not(.active) {
