#904 Toggling the labels now works 100%, cleaned up and ready to rock!

--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -7,6 +7,15 @@
             btn-info
         {{/ifCond}}
         ">
-        <i class="fas {{ fa_class }}"></i>
+        <div class="row no-gutters">
+            <div class="col-auto">
+                <i class="fas {{ fa_class }}"></i>
+            </div>
+            <div class="col">
+                <span class="map_controls_element_label_toggle" style="display: none;">
+                    {{ text }}
+                </span>
+            </div>
+        </div>
     </div>
 </div>
