#902 Updated embed page enemy forces display

--- a/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
@@ -1,7 +1,9 @@
 <div id="map_enemy_forces" class="font-weight-bold text-center">
-    <span id="map_enemy_forces_numbers" class="sidebar-background" data-toggle="tooltip">
+    <span id="map_enemy_forces_status" class="sidebar-background pr-1" data-toggle="tooltip">
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
+    </span>
+    <span style="cursor: default">
         <span id="map_enemy_forces_count">0</span>/<span id="map_enemy_forces_count_total">{{enemy_forces_total}}</span>
         (<span id="map_enemy_forces_percent">0</span>%)
     </span>
