#745 WIP Added new overview page that replaces the home page once you're logged in.

--- a/resources/assets/js/handlebars/affixgroups_complex_template.handlebars
+++ b/resources/assets/js/handlebars/affixgroups_complex_template.handlebars
@@ -11,6 +11,13 @@
                     </div>
                 </div>
             {{/affixes}}
+            <div class="affix_row col-md-3">
+                <div class="select_icon mr-2" style="height: 24px; max-width: 100% !important;">
+                    {{#if seasonal_index}}
+                        {{seasonal_index}}
+                    {{/if}}
+                </div>
+            </div>
         </div>
     {{/affixgroups}}
 </div>
