--- a/resources/assets/js/handlebars/affixgroups_single_template.handlebars
+++ b/resources/assets/js/handlebars/affixgroups_single_template.handlebars
@@ -8,5 +8,10 @@
                 </div>
             </div>
         {{/affixes}}
+        {{#if seasonal_index}}
+            <div class="affix_row float-left">
+            {{seasonal_index}}
+            </div>
+        {{/if}}
     </div>
 {{/affixgroups}}
