--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -269,6 +269,14 @@ body {
     background-color: #20895E;
   }
 
+  .btn-outline-success:hover .text-light {
+    color: #fff !important;
+  }
+
+  .btn-outline-info:hover .text-light {
+    color: #fff !important;
+  }
+
   .panel-heading {
     font-size: 28px;
   }
