#745 Fixed many small bugs and tidied up the new overview page.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -325,7 +325,7 @@ html, body, #map, #app, .wrapper {
     cursor: pointer;
 }
 
-#pulls_sidebar .map_killzonessidebar_floor_switch,
+#pulls_sidebar .edit .map_killzonessidebar_floor_switch,
 #pulls_sidebar .map_killzonessidebar_killzone .grip {
     cursor: move;
     font-size: 1.2em;
