--- a/resources/assets/js/handlebars/map_enemy_forces_template_embed.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_embed.handlebars
@@ -3,7 +3,7 @@
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
     </span>
-    <span id="map_enemy_forces_percent" data-toggle="tooltip" data-placement="bottom" style="cursor: default">0</span>%
+    <span id="map_enemy_forces_percent" data-toggle="tooltip" data-placement="bottom" style="cursor: default">0%</span>
     <i id="map_enemy_forces_override_warning" class="fas fa-exclamation-triangle text-warning" style="display: none;"
        data-toggle="tooltip" data-placement="bottom" title="{{enemy_forces_overridden_label}}"></i>
 </div>
