--- a/resources/assets/js/handlebars/affixgroups_complex_template.handlebars
+++ b/resources/assets/js/handlebars/affixgroups_complex_template.handlebars
@@ -5,14 +5,14 @@
     {{#affixgroups}}
         <div class="row affix_list_row no-gutters" style="width: 200px">
             {{#affixes}}
-                <div class="affix_row col-md-3">
+                <div class="affix_row col-md">
                     <div class="select_icon affix_icon_{{class}} mr-2" style="height: 24px;">
                         &nbsp;
                     </div>
                 </div>
             {{/affixes}}
-            <div class="affix_row col-md-3">
-                <div class="select_icon mr-2" style="height: 24px; max-width: 100% !important;">
+            <div class="affix_row col-md">
+                <div class="select_icon" style="height: 24px; max-width: 100% !important;">
                     {{#if seasonal_index}}
                         {{seasonal_index}}
                     {{/if}}
