#923 Admin mapping now shows the top header again

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -413,7 +413,7 @@ html, body, #map, #app, .wrapper {
 
 .route_manipulation_tools .bg-header {
     margin-left: 0 !important;
-    padding: 0 0.5rem 0 0 !important;
+    /*padding: 0 0.5rem 0 0 !important;*/
 }
 
 @media (min-width: 1200px) {
