#923 An exported route will no longer have empty pulls if all enemies in said pull could not be mapped to MDT enemies

--- a/resources/assets/js/handlebars/import_string_warnings_template.handlebars
+++ b/resources/assets/js/handlebars/import_string_warnings_template.handlebars
@@ -1,5 +1,5 @@
-<div class="alert alert-warning" role="alert">
-    <i class="fa fa-exclamation-triangle"></i> {{warnings_label}}
+<div class="alert alert-info" role="alert">
+    <i class="fa fa-info-circle"></i> {{export_notes_label}}
 </div>
 
 <div class="row no-gutters">
