--- a/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
@@ -5,7 +5,7 @@
     </span>
     <span style="cursor: default">
         <span id="map_enemy_forces_count">0</span>/<span id="map_enemy_forces_count_total">{{enemy_forces_total}}</span>
-        (<span id="map_enemy_forces_percent">0</span>%)
+        (<span id="map_enemy_forces_percent">0</span>)
     </span>
     <i id="map_enemy_forces_override_warning" class="fas fa-exclamation-triangle text-warning" style="display: none;"
        data-toggle="tooltip" title="{{enemy_forces_overridden_label}}"></i>
