#923 Again fixed various mapping tool related issues - removed MDT teeming enemies throwing warnings if they aren't mapped in Keystone.guru

--- a/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
@@ -68,5 +68,9 @@
             <div class="col-5 no-gutters">{{ mdt_id_label }}</div>
             <div class="col-7 no-gutters">{{ mdt_id }}</div>
         </div>
+        <div class="row">
+            <div class="col-5 no-gutters">{{ mdt_npc_id_label }}</div>
+            <div class="col-7 no-gutters">{{ mdt_npc_id }}</div>
+        </div>
     {{/if}}
 </div>
