--- a/resources/assets/sass/theme/darkly/darkly.scss
+++ b/resources/assets/sass/theme/darkly/darkly.scss
@@ -18,7 +18,7 @@
     background-image: url('/images/home/darkly_footer.jpg');
   }
 
-  .table-striped tbody tr:nth-of-type(odd) {
+  tbody tr.odd {
     background-color: var(--theme-darker);
   }
 
