#933 Added release v4.4 along with a few minor bugfixes

--- a/resources/assets/sass/theme/darkly/darkly.scss
+++ b/resources/assets/sass/theme/darkly/darkly.scss
@@ -18,6 +18,10 @@
     background-image: url('/images/home/darkly_footer.jpg');
   }
 
+  .table-striped tbody tr:nth-of-type(odd) {
+    background-color: var(--theme-darker);
+  }
+
   tbody tr.odd {
     background-color: var(--theme-darker);
   }
