#966 Added MDT auto solver

--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -540,7 +540,8 @@ body {
   }
 
   #view_route_map_actions_container .btn,
-  #edit_route_draw_map_actions_container .btn {
+  #edit_route_draw_map_actions_container .btn,
+  #edit_route_draw_admin_map_actions_container .btn {
     border-radius: 0;
   }
 
