#1005 Route edit settings are now under a separate button/modal. Affix selection is no longer an advanced option

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -350,3 +350,11 @@
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
+
+#dungeonroute_coverage_affixgroup_table .covered {
+    background-color: #7efc7e11;
+}
+
+#dungeonroute_coverage_affixgroup_table .covered_warning {
+    background-color: #fcc57e11;
+}
