--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -899,6 +899,26 @@ html, body, #map, #app, .wrapper {
     border: 3px dashed #ff9900;
 }
 
+.inspiring {
+    border: 3px solid #ffd500;
+}
+
+.awakened {
+    border: 3px solid #810098;
+}
+
+.encrypted {
+    border: 3px solid #d000ff;
+}
+
+.tormented {
+    border: 3px solid #ffffff;
+}
+
+.prideful {
+    border: 3px solid #ff9900;
+}
+
 .modifier_external {
     width: 16px !important;
     height: 16px !important;
