#1042 Fixed fonts not loading properly - echo not connecting

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -41,3 +41,8 @@
 @import "~bootstrap4-toggle/css/bootstrap4-toggle.min.css";
 // Ion Range Slider
 @import "~ion-rangeslider/css/ion.rangeSlider.min.css";
+// Fonts
+@font-face {
+    font-family: 'Raleway';
+    src: url('/webfonts/raleway.woff2') format('woff2');
+}
