#1043 Fixed square images uploaded as user profiles not being rounded off on display

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -384,6 +384,7 @@ html, body, #map, #app, .wrapper {
     width: 30px;
     height: 30px;
     font-size: 1.15rem;
+    border-radius: 16px;
 }
 
 .theme .echo_user {
