#1136 Updated body font-size to revert to how they were after updating library versions

--- a/resources/assets/sass/theme/lux/lux.scss
+++ b/resources/assets/sass/theme/lux/lux.scss
@@ -4,6 +4,10 @@
   @import "~bootstrap/scss/bootstrap";
   @import "~bootswatch/dist/lux/bootswatch";
 
+  body {
+    font-size: 0.9375rem;
+  }
+
   /** Lux special - make sure the top header has the same height as the one in Darkly */
   .navbar {
     padding: 1rem 1rem;
