--- a/resources/assets/sass/theme/darkly/darkly.scss
+++ b/resources/assets/sass/theme/darkly/darkly.scss
@@ -4,6 +4,9 @@
   @import "~bootstrap/scss/bootstrap";
   @import "~bootswatch/dist/darkly/bootswatch";
 
+  body {
+    font-size: 0.9375rem;
+  }
 
   .form-control {
     border: 1px solid #222;
