--- a/resources/assets/sass/theme/darkly/darkly.scss
+++ b/resources/assets/sass/theme/darkly/darkly.scss
@@ -4,7 +4,7 @@
   @import "~bootstrap/scss/bootstrap";
   @import "~bootswatch/dist/darkly/bootswatch";
 
-  body {
+  body, .form-control, .dropdown-menu, .btn {
     font-size: 0.9375rem;
   }
 
